# filters

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.builds/: debian.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: block-fixup.yml  ci.yml
src/: filter.rs  impl_traits.rs  iter.rs  lib.rs
src/failable/: filter.rs  mod.rs
src/failable/ops/: and.rs  bool.rs  map.rs  mod.rs  not.rs  or.rs  xor.rs
src/ops/: and.rs  bool.rs  failable.rs  map.rs  mod.rs  not.rs  or.rs  xor.rs
