[package]
name = "filters"
version = "0.1.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>",
           "Marcel Müller <neikos@neikos.email>" ]

description = "Build filters/predicates with the builder pattern"
keywords = ["iterator", "filter", "builder", "util"]
readme        = "./README.md"
license       = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/filters/filters/index.html"
repository = "https://github.com/matthiasbeyer/filters"

[dependencies]

[features]
unstable-filter-as-fn=[]
