[package]
name    = "filters"
version = "0.4.0"
edition = "2021"
authors = ["Matthias Beyer <mail@beyermatthias.de>",
           "Marcel Müller <neikos@neikos.email>" ]

description   = "Build filters/predicates with the builder pattern"
keywords      = ["iterator", "filter", "builder", "util"]
categories    = ["rust-patterns"]
readme        = "./README.md"
license       = "MPL-2.0"
repository    = "https://git.beyermatthi.as/filters"


[dependencies]

[features]
unstable-filter-as-fn = []
